# Crackd

./: .gitignore  README.md
.claude/: settings.json
backend/: .env.example  package-lock.json  package.json
backend/src/: config.ts  index.ts
backend/src/routes/: game.ts  leaderboard.ts  player.ts  pool.ts
backend/src/scripts/: smokeHub.ts  smokeSockets.ts
backend/src/services/: aiService.ts  assets.ts  gameLogic.test.ts  gameLogic.ts  services.ts  stellarService.ts
backend/src/socket/: events.ts  gameHandler.ts
backend/src/store/: gameState.ts
backend/src/types/: game.ts
backend/src/utils/: units.ts
contracts/: .gitignore  Cargo.toml
contracts/crackd-duel/: Cargo.toml
contracts/crackd-duel/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/crackd-vault/: Cargo.toml
contracts/crackd-vault/src/: errors.rs  events.rs  lib.rs  rewards.rs  storage.rs  test.rs  types.rs
contracts/deployments/: testnet.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx  Orb.tsx  PlayLayout.tsx  WalletButton.tsx
frontend/src/components/game/: ErrorBar.tsx  FinishedPanel.tsx  LobbyPanel.tsx  ModePicker.tsx  SetupPanel.tsx
frontend/src/components/game/board/: Board.tsx  BoardHeader.tsx  Composer.tsx  PlayerTile.tsx
frontend/src/hooks/: useGameSocket.ts
frontend/src/lib/: api.ts  socket.ts  stellar.ts  wallet.ts
frontend/src/pages/: Game.tsx  Home.tsx  Leaderboard.tsx  Logos.tsx  Profile.tsx
frontend/src/store/: walletStore.ts
